# docs/swagger.yaml
@@ -114,7 +114,6 @@ definitions:
   models.SubCategoryResponse:
     properties:
       id:
-        description: UUID as string
         type: string
       name:
         type: string
@@ -154,6 +153,34 @@ info:
   version: "1.0"
 paths:
   /ads:
+    put:
+      description: Edits ad by ID
+      parameters:
+      - description: Ad details
+        in: body
+        name: ad
+        required: true
+        schema:
+          $ref: '#/definitions/entity.CreateAdRequest'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+      - BearerAuth: []
+      summary: Update Ad
+      tags:
+      - ads
+  /ads/:
     post:
       consumes:
       - application/json
@@ -183,33 +210,6 @@ paths:
       security:
       - BearerAuth: []
       summary: Create a new ad
-      tags:
-      - ads
-    put:
-      description: Edits ad by ID
-      parameters:
-      - description: Ad details
-        in: body
-        name: ad
-        required: true
-        schema:
-          $ref: '#/definitions/entity.CreateAdRequest'
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/v1.response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/v1.response'
-      security:
-      - BearerAuth: []
-      summary: Update Ad
       tags:
       - ads
   /ads/{id}:
